# iir-ws

./: .gitignore  Infrastructure Inspection Robot (IIR) Software Tutorial.md  README.md  bms_start_script.bash  lidar_script.bash  lidar_script_v2.bash  map_1762399732.pgm  map_1762399732.yaml  start_script.bash  tmux_script.bash
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
log/: latest_build
src/: ros2.repos
src/IIR_base/: CMakeLists.txt  package.xml  readme.MD
src/IIR_base/config/: diffbot_controllers.yaml  ekf.yaml  iirbot_view.rviz
src/IIR_base/launch/: diffbot.launch.py  diffbot_sim_test.launch.py  view_robot.launch.py
src/IIR_base/urdf/: hokuyo_ust10.urdf.xacro  iir_description.urdf.xacro  iirbot.ros2_control.xacro  iirbot.urdf.xacro
src/arducam_rclpy_tof_pointcloud/arducam_rclpy_tof_pointcloud/: tof_pointcloud.py
src/daly_bms_can/: package.xml  setup.cfg  setup.py
src/daly_bms_can/daly_bms_can/: daly_bms_pub.py
src/iir_nav2/: README.md
src/iir_nav2/maps/: lab_map.pgm  lab_map.yaml
src/iir_sim/: CMakeLists.txt  README.md
src/image_saver/: README.md  package.xml  setup.cfg  setup.py
src/lidar_filter/: README.MD  package.xml  setup.cfg  setup.py
src/nav2_commander/: README.md  package.xml  setup.py
src/number-recognizer/: README.md
src/number-recognizer/display_reader/: package.xml
src/number-recognizer/display_reader/launch/: display_reader.launch.py
src/picolistener/: README.md  package.xml  setup.cfg  setup.py
src/urg_node/: README.md
src/wheelmuxer/: package.xml  setup.cfg  setup.py
(+75 files in other folders)
